Thu Feb 09 23:51:56 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/preferences-page-irc.c:
	  - Use irc_extra_hilight instead of irc_nick_hilight. (#325681)

Thu Feb 09 22:33:37 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/navigation-tree.c:
	  - Use same icon for query messages than for nick highlighting. (#330449)

Sun Feb 05 02:46:18 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/gui.c:
	  - Use the timestamp format string in the xchat preferences if it
	    exists.

Thu Feb 02 17:03:41 MST 2006  Vincent Marc <vincent.marc@laposte.net>

	* src/fe-gnome/dcc-window.c:
	  - Fix a crash with dcc chats

Thu Feb 02 23:51:13 CET 2006  Guillaume Desmottes <cass@skynet.be>

	*  src/fe-gnome/navigation-tree.c:
	   - Grab the focus on the text entry when we change
	     channel/dialog. (#329673)

Wed Feb 01 01:06:47 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	* data/xchat-gnome-ui.xml:
	  - Add a default popup when right click in conversation panel.
	  - Add a copy action in the default popup (#328496).

Sun Jan 29 15:01:46 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/main-window.h:
	* src/fe-gnome/fe-gnome.c:
	  - Gray out the nick when we're away (#327722)

Fri Jan 27 00:46:33 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Fix PKG_CHECK_MODULES output for the negative case when we have a
	    non-default action.

Fri Jan 27 00:23:25 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	  - Put focus on channel/dialog window when we click on its name in chat

Thu Jan 26 16:13:18 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	  - Reorder a couple statements to (hopefully) finally fix that color
	    bug on startup.

Thu Jan 26 22:22:20 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/about.c: