@@ -1,3 +1,8 @@
+Fri Feb 10 21:35:53 CET 2006  Guillaume Desmottes <cass@skynet.be>
+
+	* src/fe-gnome/preferences-page-irc.c:
+	  - Avoid to add a null highlight word if we cancel its edition.
+
 Thu Feb 09 23:51:56 CET 2006  Guillaume Desmottes <cass@skynet.be>
 
 	* src/fe-gnome/preferences-page-irc.c:
